Fixes site header overflow in IE 11

--- a/style.css
+++ b/style.css
@@ -1196,7 +1196,6 @@ ul.social-icons li {
 	justify-content: center;
 	padding: 0 4rem;
 	text-align: center;
-	width: 100%;
 }
 
 .site-title,
@@ -1383,14 +1382,32 @@ ul.primary-menu {
 	margin: -.8rem 0 0 -1.6rem;
 }
 
-.primary-menu svg {
+.primary-menu .icon {
 	display: block;
 	height: .7rem;
+	position: absolute;
 	width: 1.3rem;
+	transform: rotate( -45deg );
 }
 
-.primary-menu svg polygon {
-	fill: currentColor;
+.primary-menu .icon:before,
+.primary-menu .icon:after {
+	content: "";
+	display: block;
+	background-color: currentColor;
+	position: absolute;
+		bottom: calc( 50% - .1rem );
+		left: 0;
+}
+
+.primary-menu .icon:before {
+	height: .9rem;
+	width: .2rem;
+}
+
+.primary-menu .icon:after {
+	height: .2rem;
+	width: .9rem;
 }
 
 .primary-menu li {
@@ -1407,10 +1424,9 @@ ul.primary-menu {
 	padding-right: 2rem;
 }
 
-.primary-menu > li > svg {
-	position: absolute;
-		right: 0;
-		top: calc( 50% - .35rem );
+.primary-menu > li > .icon {
+	right: -.5rem;
+	top: calc( 50% - .4rem );
 }
 
 .primary-menu a {
@@ -1490,11 +1506,10 @@ ul.primary-menu {
 	padding-right: 4.5rem;
 }
 
-.primary-menu ul li.menu-item-has-children svg {
+.primary-menu ul li.menu-item-has-children .icon {
 	position: absolute;
-		right: 2rem;
-		top: 50%;
-	transform: translateY( -50% );
+		right: 1.5rem;
+		top: calc( 50% - .5rem );
 }
 
 /* DEEP DOWN */
@@ -4174,7 +4189,6 @@ ul.footer-social li {
 		margin-right: 4rem;
 		padding: 0;
 		text-align: left;
-		width: auto;
 	}
 
 	.header-titles {
